lazy load images

--- a/index.html
+++ b/index.html
@@ -25,54 +25,21 @@
     <div class="menuWrapper">
         <button class="menuButton">
             <span class="icon menuIcon">
-                <svg xmlns:dc="http://purl.org/dc/elements/1.1/"
-                xmlns:cc="http://creativecommons.org/ns#"
-                xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                xmlns:svg="http://www.w3.org/2000/svg"
-                xmlns="http://www.w3.org/2000/svg"
-                version="1.1"
-                id="svg2"
-                class="menuButton-icon"
-                viewBox="0 0 39 29"
-                height="29"
-                width="39"
-                preserveAspectRatio="xMidYMid">
-   
-               <title>@Html.Common().RenderLabel("pages", "store", "store.xml", "mainMenu")</title>
-   
-               <rect ry="0"
-                     class="menuIconPart"
-                     y="0.0159767"
-                     x="-0.0043927"
-                     height="2.96842"
-                     width="38.9892"
-                     id="menuIconTop"
-                     style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"/>
-               <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
-                     class="menuIconPart"
-                     id="menuIconMiddle"
-                     width="38.9892"
-                     height="2.96842"
-                     x="-0.0043927"
-                     y="13.016"
-                     ry="0"/>
-               <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
-                     class="menuIconPart"
-                     id="menuIconMiddle2"
-                     width="38.9892"
-                     height="2.96842"
-                     x="-0.0043927"
-                     y="13.016"
-                     ry="0"/>
-               <rect ry="0"
-                     class="menuIconPart"
-                     y="26.016"
-                     x="-0.0043927"
-                     height="2.96842"
-                     width="38.9892"
-                     id="menuIconBottom"
-                     style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"/>
-           </svg>
+                <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                    xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg2" class="menuButton-icon"
+                    viewBox="0 0 39 29" height="29" width="39" preserveAspectRatio="xMidYMid">
+
+                    <title>@Html.Common().RenderLabel("pages", "store", "store.xml", "mainMenu")</title>
+
+                    <rect ry="0" class="menuIconPart" y="0.0159767" x="-0.0043927" height="2.96842" width="38.9892" id="menuIconTop" style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
+                    />
+                    <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none" class="menuIconPart" id="menuIconMiddle" width="38.9892"
+                        height="2.96842" x="-0.0043927" y="13.016" ry="0" />
+                    <rect style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none" class="menuIconPart" id="menuIconMiddle2" width="38.9892"
+                        height="2.96842" x="-0.0043927" y="13.016" ry="0" />
+                    <rect ry="0" class="menuIconPart" y="26.016" x="-0.0043927" height="2.96842" width="38.9892" id="menuIconBottom" style="stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none"
+                    />
+                </svg>
                 <span class="visuallyHidden">Menu</span>
             </span>
         </button>
@@ -106,8 +73,8 @@
         <div tabindex="-1" class="slide is-open">
             <h1 class="headline">I am a
                 <a class="link" href="#frontEndPortfolio">senior front end developer</a>
-                <br />
-                and <a class="link" href="#jsPortfolio">JavaScript engineer</a>
+                <br /> and
+                <a class="link" href="#jsPortfolio">JavaScript engineer</a>
             </h1>
 
         </div>
@@ -231,7 +198,7 @@
                 <a href="https://www.justcavalli.com" target="_blank">Just Cavalli e-store</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/cavalli.jpg" alt="">
+                <img data-src="media/cavalli.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -261,7 +228,7 @@
                 <a href="http://www.ledpedestriancrossing.com/configuratore/index.html" target="_blank">APL configurator</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/apl.jpg" alt="">
+                <img data-src="media/apl.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -286,7 +253,7 @@
                 <a href="https://www.maisonmargiela.com" target="_blank">Maison Margiela e-store</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/margiela.jpg" alt="">
+                <img data-src="media/margiela.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -314,7 +281,7 @@
                 <a href="http://store.y-3.com" target="_blank">Y-3 e-store</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/y3.jpg" alt="">
+                <img data-src="media/y3.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -340,7 +307,7 @@
                 <a href="https://www.karl.com" target="_blank">Karl Lagerfeld e-store</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/karl.jpg" alt="">
+                <img data-src="media/karl.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -367,7 +334,7 @@
                 <a href="http://nextopeningfood.it" target="_blank">Next Opening Food website</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/nextOpening.jpg" alt="">
+                <img data-src="media/nextOpening.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -390,7 +357,7 @@
                 <a href="http://www.bicigeneratori.it" target="_blank">Bicigeneratori website</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/bicigeneratori.jpg" alt="">
+                <img data-src="media/bicigeneratori.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -415,7 +382,7 @@
                 <a href="http://carismarct.com" target="_blank">Carisma website</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/carisma.jpg" alt="">
+                <img data-src="media/carisma.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -439,7 +406,7 @@
                 <a href="http://legambientebologna.org" target="_blank">Legambiente Bologna website</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/legambiente.jpg" alt="">
+                <img data-src="media/legambiente.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -464,7 +431,7 @@
                 <a href="http://clubsicurezza.viro.it" target="_blank">Club Viro della Sicurezza blog</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/viro.jpg" alt="">
+                <img data-src="media/viro.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -489,7 +456,7 @@
                 <a href="https://github.com/fbedussi/ttracker" target="_blank">tTracker</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/ttracker.jpg" alt="">
+                <img data-src="media/ttracker.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -516,7 +483,7 @@
                 <a href="https://github.com/fbedussi/reveal-js-editor" target="_blank">ReMEdi</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/remedi.jpg" alt="">
+                <img data-src="media/remedi.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -542,7 +509,7 @@
                 <a href="https://github.com/fbedussi/nightwatchGui" target="_blank">Nightwatch Gui</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/nightwatchgui.jpg" alt="">
+                <img data-src="media/nightwatchgui.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -567,7 +534,7 @@
                 <a href="https://github.com/fbedussi/gpp" target="_blank">Gherkin pre-processor</a>
             </h2>
             <div class="imageAndDatasheet">
-                <img src="media/gpp.jpg" alt="">
+                <img data-src="media/gpp.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
@@ -594,8 +561,8 @@
             <p>I am a senior front end and JavaScript developer. I’m expert in usability, accessibility, and test automation.</p>
 
             <h3 class="slideSubtitle" id="expertise">Expertise</h3>
-            <p>I work in the web industry since 2002. At first as a project leader, then, from 2007 to 2014 as a freelance
-                web developer and web marketing consultant. Since 2015 I am a full time interface developer at Yoox Net-A-Porter
+            <p>I work in the web industry since 2002. At first as a project leader, then, from 2007 to 2014 as a freelance web
+                developer and web marketing consultant. Since 2015 I am a full time interface developer at Yoox Net-A-Porter
                 Group.
             </p>
 
@@ -617,23 +584,36 @@
             </ul>
 
             <h3 class="slideSubtitle" id="work-experience">Work experience</h3>
-
-            <h4 class="slideSubtitle2" id="interface-developer">Interface Developer (<strong>2015 &gt; Today</strong>)</h4>
-            <p>Yoox Net-A-Porter Group, Via Nannetti 1, Zola Predosa (BO).<br/>Key responsibilities: front-end development for monobrand
-                web sites. Development of the corporate framework for functional automated testing. Accessibility evangelist.</p>
-
-            <h4 class="slideSubtitle2" id="web-developer--web-marketing-consultant">Web developer &amp; web marketing consultant (2007 &gt; 2014)</h4>
-            <p>Free lance. Key clients: Viro Spa, Centro Anatartide, Sviluppi Urbani Srl.<br/>Key responsibilities: design and development
-                of web sites and on-line communication campaigns.</p>
-
-            <h4 class="slideSubtitle2" id="co-founder">Co-founder <strong>(2004 &gt;2007)</strong></h4>
-            <p>Caffe Network Scarl, Bologna, Italy, an agency specialised in the set up, fine tuning, monitoring and management
-                of distribution networks for free press editorial initiatives and for ambient advertising solutions.<br/>Key
-                responsibilities: start-up, business development, marketing manager.</p>
-
-            <h4 class="slideSubtitle2" id="project-leader">Project leader <strong>(2002 &gt; 2003)</strong></h4>
-            <p>O-one, Reggio Emilia, web agency.<br/>Key responsibilities: business development, project management.</p>
-
+            <ul>
+                <li>
+                    <h4 class="slideSubtitle2" id="interface-developer">Interface Developer (
+                        <strong>2015 &gt; Today</strong>)</h4>
+                    <p>Yoox Net-A-Porter Group, Via Nannetti 1, Zola Predosa (BO).
+                        <br/>Key responsibilities: front-end development for monobrand web sites. Development of the corporate
+                        framework for functional automated testing. Accessibility evangelist.</p>
+                </li>
+                <li>
+                    <h4 class="slideSubtitle2" id="web-developer--web-marketing-consultant">Web developer &amp; web marketing consultant (2007 &gt; 2014)</h4>
+                    <p>Free lance. Key clients: Viro Spa, Centro Anatartide, Sviluppi Urbani Srl.
+                        <br/>Key responsibilities: design and development of web sites and on-line communication campaigns.</p>
+                </li>
+                <li>
+                    <h4 class="slideSubtitle2" id="co-founder">Co-founder
+                        <strong>(2004 &gt;2007)</strong>
+                    </h4>
+                    <p>Caffe Network Scarl, Bologna, Italy, an agency specialised in the set up, fine tuning, monitoring and
+                        management of distribution networks for free press editorial initiatives and for ambient advertising
+                        solutions.
+                        <br/>Key responsibilities: start-up, business development, marketing manager.</p>
+                </li>
+                <li>
+                    <h4 class="slideSubtitle2" id="project-leader">Project leader
+                        <strong>(2002 &gt; 2003)</strong>
+                    </h4>
+                    <p>O-one, Reggio Emilia, web agency.
+                        <br/>Key responsibilities: business development, project management.</p>
+                </li>
+            </ul>
             <h3 class="slideSubtitle" id="education">Education</h3>
 
             <ul>
