--- a/index.html
+++ b/index.html
@@ -89,61 +89,61 @@
             <h2 class="slideTitle">Front end development portfolio</h2>
             <ul>
                 <li>
-                    <a href="#cavalli">
+                    <a href="#cavalli" class="underlineIn">
                         <span class="portfolioItem">Just Cavalli e-store</span>
                         <span class="portfolioDate">2017</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#apl">
+                    <a href="#apl" class="underlineIn">
                         <span class="portfolioItem">APL configurator</span>
                         <span class="portfolioDate">2017</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#margiela">
+                    <a href="#margiela" class="underlineIn">
                         <span class="portfolioItem">Maison Margiela e-store</span>
                         <span class="portfolioDate">2016</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#y3">
+                    <a href="#y3" class="underlineIn">
                         <span class="portfolioItem">Y-3 e-store</span>
                         <span class="portfolioDate">2016</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#lagerfeld">
+                    <a href="#lagerfeld" class="underlineIn">
                         <span class="portfolioItem">Karl Lagerfeld e-store</span>
                         <span class="portfolioDate">2015</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#nextOpening">
+                    <a href="#nextOpening" class="underlineIn">
                         <span class="portfolioItem">Next Opening Food website</span>
                         <span class="portfolioDate">2014</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#bicigeneratori">
+                    <a href="#bicigeneratori" class="underlineIn">
                         <span class="portfolioItem">Bicigeneratori website</span>
                         <span class="portfolioDate">2013</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#viro">
+                    <a href="#viro" class="underlineIn">
                         <span class="portfolioItem">Club Viro della Sicurezza blog</span>
                         <span class="portfolioDate">2013</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#carisma">
+                    <a href="#carisma" class="underlineIn">
                         <span class="portfolioItem">Carisma website</span>
                         <span class="portfolioDate">2012</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#legambiente">
+                    <a href="#legambiente" class="underlineIn">
                         <span class="portfolioItem">Legambiente Bologna website</span>
                         <span class="portfolioDate">2012</span>
                     </a>
@@ -161,25 +161,25 @@
             <h2 class="slideTitle">JavaScript development portfolio</h2>
             <ul>
                 <li>
-                    <a href="#ttracker">
+                    <a href="#ttracker" class="underlineIn">
                         <span class="portfolioItem">tTracker, a time tracking app for freelancers</span>
                         <span class="portfolioDate">2017</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#remedi">
+                    <a href="#remedi" class="underlineIn">
                         <span class="portfolioItem">ReMEdi reveal.js markdown editor</span>
                         <span class="portfolioDate">2016</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#nightwatchGui">
+                    <a href="#nightwatchGui" class="underlineIn">
                         <span class="portfolioItem">nightwatchGui, a Graphical User Interface for the test automation framework nightwatch-cucumber</span>
                         <span class="portfolioDate">2016</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#gpp">
+                    <a href="#gpp" class="underlineIn">
                         <span class="portfolioItem">Gherkin/Cucumber file preprocessor</span>
                         <span class="portfolioDate">2016</span>
                     </a>
