--- a/index.html
+++ b/index.html
@@ -823,6 +823,16 @@
     </main>
     <script src="vjQuery.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29533308-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-29533308-1');
+    </script>
+
 </body>
 
 </html>
