--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+    <script src="js/fontfaceobserver.js" type="text/javascript"></script>    
 </head>
 
 <body>
@@ -821,8 +822,8 @@
         </div>
 
     </main>
-    <script src="vjQuery.js" type="text/javascript"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/vjQuery.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29533308-1"></script>
     <script>
