--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="overlay"></div>
         <div tabindex="-1" class="slide is-open">
             <h1 class="headline">I am a
-                <a class="link" href="#frontEndPortfolio">senior front end developer</a>
+                <a class="link" href="#frontEndPortfolio">front end developer</a>
                 <br />
                 and <a class="link" href="#jsPortfolio">JavaScript engineer</a>
             </h1>
@@ -591,11 +591,11 @@
                 <span class="visuallyHidden">back</span>
             </button>
             <h2 id="about" class="slideTitle">About me</h2>
-            <p>I am a senior front end and JavaScript developer. I’m expert in usability, accessibility, and test automation.</p>
+            <p>I am a front end and JavaScript developer. I like to build things, to solve problems and to learn new things. I love to work with people different from me, but toward a common goal. I'm most interested in accessibility, usability, test automation and artificial intelligence.</p>
 
             <h3 class="slideSubtitle" id="expertise">Expertise</h3>
             <p>I work in the web industry since 2002. At first as a project leader, then, from 2007 to 2014 as a freelance
-                web developer and web marketing consultant. Since 2015 I am a full time interface developer at Yoox Net-A-Porter
+                web developer and web marketing consultant. Since 2015 I am a full time interface developer/Front end developer at Yoox Net-A-Porter
                 Group.
             </p>
 
@@ -618,7 +618,7 @@
 
             <h3 class="slideSubtitle" id="work-experience">Work experience</h3>
 
-            <h4 class="slideSubtitle2" id="interface-developer">Interface Developer (<strong>2015 &gt; Today</strong>)</h4>
+            <h4 class="slideSubtitle2" id="interface-developer">Interface Developer/Front end developer (<strong>2015 &gt; Today</strong>)</h4>
             <p>Yoox Net-A-Porter Group, Via Nannetti 1, Zola Predosa (BO).<br/>Key responsibilities: front-end development for monobrand
                 web sites. Development of the corporate framework for functional automated testing. Accessibility evangelist.</p>
 
