--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="overlay"></div>
         <div tabindex="-1" class="slide is-open">
             <h1 class="headline">I am a
-                <a class="link" href="#frontEndPortfolio">front end developer</a>
-                <br /> and
+                <a class="link" href="#frontEndPortfolio">senior front end developer</a>
+                <br /> and a 
                 <a class="link" href="#jsPortfolio">JavaScript engineer</a>
             </h1>
 
@@ -727,7 +727,7 @@
                 <span class="visuallyHidden">back</span>
             </button>
             <h2 id="about" class="slideTitle">About me</h2>
-            <p>I am a front end and JavaScript developer. I like to build things, to solve problems and to learn new things. I love to work with people different from me, but toward a common goal. I'm most interested in accessibility, usability, test automation and artificial intelligence.</p>
+            <p>I am a senior front end and JavaScript developer. I like to build things, to solve problems and to learn new things. I love to work with people different from me, but toward a common goal. I'm most interested in accessibility, usability, test automation and artificial intelligence.</p>
 
             <h3 class="slideSubtitle" id="expertise">Expertise</h3>
             <p>I work in the web industry since 2002. At first as a project leader, then, from 2007 to 2014 as a freelance
