--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <main class="content">
         <div class="overlay"></div>
-        <div tabindex="-1" class="slide is-open">
+        <div tabindex="-1" class="slide is-open" id="home">
             <h1 class="headline">I am a
                 <a class="link" href="#frontEndPortfolio">senior front end developer</a>
                 <br /> and a 
