postcss & babel working

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Francesco Bedussi, front end and JavaScript developer</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-dist.css" />
     <meta charset="UTF-8">
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+    <script src="js/promises.min.js" type="text/javascript"></script>
     <script src="js/fontfaceobserver.js" type="text/javascript"></script>
 </head>
 
@@ -795,7 +796,7 @@
 
     </main>
     <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script-compiled.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29533308-1"></script>
     <script>
