--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style-dist.css" />
     <meta charset="UTF-8">
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-    <script src="js/promises.min.js" type="text/javascript"></script>
+    <script nomodule src="js/promises.min.js" type="text/javascript"></script>
     <script src="js/fontfaceobserver.js" type="text/javascript"></script>
 </head>
 
@@ -796,7 +796,8 @@
 
     </main>
     <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="js/script-compiled.js" type="text/javascript"></script>
+    <script type="module" src="js/script.js" type="text/javascript"></script>
+    <script nomodule src="js/script-compiled.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29533308-1"></script>
     <script>
