browser back button working

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
                         <span class="portfolioDate">2015</span>
                     </a>
                 </li>
+                <!-- <li>
+                    <a href="#addressbook" class="underlineIn">
+                        <span class="portfolioItem">Addressbook</span>
+                        <span class="portfolioDate">2014</span>
+                    </a>
+                </li> -->
                 <li>
                     <a href="#nextOpening" class="underlineIn">
                         <span class="portfolioItem">Next Opening Food website</span>
@@ -164,9 +170,15 @@
             </button>
             <h2 class="slideTitle">JavaScript development portfolio</h2>
             <ul>
+                <!-- <li>
+                    <a href="#ttracker" class="underlineIn">
+                        <span class="portfolioItem">Mangiamusica, a music player for toddlers - WIP</span>
+                        <span class="portfolioDate">2017</span>
+                    </a>
+                </li> -->
                 <li>
                     <a href="#ttracker" class="underlineIn">
-                        <span class="portfolioItem">tTracker, a time tracking app for freelancers</span>
+                        <span class="portfolioItem">tTracker, a time tracking web app for freelancers</span>
                         <span class="portfolioDate">2017</span>
                     </a>
                 </li>
