add addressbook & mangiamusica case histories

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                         <span class="portfolioDate">2015</span>
                     </a>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="#addressbook" class="underlineIn">
                         <span class="portfolioItem">Addressbook</span>
                         <span class="portfolioDate">2014</span>
                     </a>
-                </li> -->
+                </li>
                 <li>
                     <a href="#nextOpening" class="underlineIn">
                         <span class="portfolioItem">Next Opening Food website</span>
@@ -170,12 +170,12 @@
             </button>
             <h2 class="slideTitle">JavaScript development portfolio</h2>
             <ul>
-                <!-- <li>
-                    <a href="#ttracker" class="underlineIn">
+                <li>
+                    <a href="#mangiamusica" class="underlineIn">
                         <span class="portfolioItem">Mangiamusica, a music player for toddlers - WIP</span>
                         <span class="portfolioDate">2017</span>
                     </a>
-                </li> -->
+                </li>
                 <li>
                     <a href="#ttracker" class="underlineIn">
                         <span class="portfolioItem">tTracker, a time tracking web app for freelancers</span>
@@ -377,6 +377,38 @@
             </div>
         </div>
 
+        <div tabindex="-1" class="slide hide" id="addressbook">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="http://www.francescobedussi.it/addressbook/" target="_blank">Addressbook</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <img
+                sizes="(max-width: 1280px) calc(100vw - 6.5rem), 1280px"
+                data-srcset="
+                media/addressbook_bc9bng_c_scale,w_200.jpg 200w,
+                media/addressbook_bc9bng_c_scale,w_695.jpg 695w,
+                media/addressbook_bc9bng_c_scale,w_1040.jpg 1040w,
+                media/addressbook_bc9bng_c_scale,w_1280.jpg 1280w"
+                data-src="media/addressbook_bc9bng_c_scale,w_1280.jpg"
+                alt="">
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>PHP</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                    <a class="btn" href="http://www.francescobedussi.it/addressbook/" target="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
         <div tabindex="-1" class="slide hide" id="nextOpening">
             <button class="icon backIcon">
                 <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -557,6 +589,36 @@
                         <li>Custom template</li>
                     </ul>
                     <a class="btn" href="http://clubsicurezza.viro.it" target="_blank">visit the site</a>
+                </div>
+            </div>
+        </div>
+
+        <div tabindex="-1" class="slide hide" id="mangiamusica">
+            <button class="icon backIcon">
+                <svg viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#backIcon" />
+                </svg>
+                <span class="visuallyHidden">back</span>
+            </button>
+            <h2 class="slideTitle">
+                <a href="https://github.com/fbedussi/mangiamusica" target="_blank">Mangiamusica</a>
+            </h2>
+            <div class="imageAndDatasheet">
+                <!-- <img sizes="(max-width: 1598px) calc(100vw - 6.5rem), 1598px" data-srcset="
+                    media/ttracker_reb2ea_c_scale,w_375.jpg 375w,
+                    media/ttracker_reb2ea_c_scale,w_1049.jpg 1049w,
+                    media/ttracker_reb2ea_c_scale,w_1598.jpg 1598w" data-src="media/ttracker_reb2ea_c_scale,w_1598.jpg"
+                    alt=""> -->
+
+                <div class="dataSheet">
+                    <h3 class="dataSheet-title">Technical details</h3>
+                    <ul class="dataSheet-list">
+                        <li>React Native</li>
+                        <li>Redux</li>
+                        <li>Jest</li>
+                        <li>Material.Ui</li>
+                    </ul>
+                    <a class="btn" href="https://github.com/fbedussi/mangiamusica" target="_blank">take a look at the project</a>
                 </div>
             </div>
         </div>
@@ -787,9 +849,7 @@
                 <span class="visuallyHidden">back</span>
             </button>
             <h2 class="slideTitle">Contact me</h2>
-            <p>
-                <a mailto="francesco@francescobedussi.it">francesco@francescobedussi.it</a>
-            </p>
+            <p>francesco [at] francescobedussi [.] it</p>
             <p>
                 I live in Bologna, Italy. I work wherever internet arrives.
             </p>
