vjQuery nextAll, next, get, trigget methods

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <ul class="dataSheet-list">
                         <li>Fully responsive</li>
                         <li>ES-6 + webpack</li>
-                        <li>SASS + PostCss</li>
+                        <li>SASS + PostCss + Foundation</li>
                         <li>Integration with third party CMS</li>
                         <li>Based on a .NET MVC custom front-end platform</li>
                         <li>Based on custom js pub-sub framework</li>
@@ -777,7 +777,7 @@
             <ul>
                 <li>Front-end development: JavaScript, ES6, Redux.js, React.js, jQuery, HTML5, CSS3, Sass, Bootstrap, Foundation,
                     AJAX, SVG, Material UI, indexedDb</li>
-                <li>Back-end development: Node.Js, C#, .NET MVC, Electron, Firebase</li>
+                <li>Back-end development: Node.Js, Electron, Firebase, C#, .NET MVC, PHP</li>
                 <li>Programming paradigms: OOP, functional programming</li>
                 <li>CMS: Joomla!, Wordpress</li>
                 <li>OS: Linux, Windows</li>
@@ -805,9 +805,9 @@
                         <br/>Key responsibilities: design and development of web sites based on Joomla! and WordPress.</p>
                 </li>
                 <li>
-                    <h4 class="slideSubtitle2" id="web-developer--web-marketing-consultant">Communication Manager and web master (2007 &gt; 2010)</h4>
+                    <h4 class="slideSubtitle2" id="web-developer--web-marketing-consultant">Communication Manager and web master (2007 &gt; 2014)</h4>
                     <p>Centro Anatartide.
-                        <br/>Key responsibilities: design of communication campaigns and events, graphic design for printed meterials and web sites, web sites managment.</p>
+                        <br/>Key responsibilities: design of communication campaigns and events, graphic design for printed meterials and web sites, web sites managment, copywriting.</p>
                 </li>
                 <li>
                     <h4 class="slideSubtitle2" id="co-founder">Co-founder
@@ -867,7 +867,8 @@
         </div>
 
     </main>
-    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script nomodule src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script type="module" src="js/vjQuery.js" type="text/javascript"></script>
     <script type="module" src="js/script.js" type="text/javascript"></script>
     <script nomodule src="js/script-compiled.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
