remove duplicate id

--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 </svg>
                 <span class="visuallyHidden">back</span>
             </button>
-            <h2 id="about" class="slideTitle">About me</h2>
+            <h2 class="slideTitle">About me</h2>
             <ul>
                 <li>
                     I am a senior front end and JavaScript developer with 7 years experience.
