fix lazy load image

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                     media/viro_zh9kd4_c_scale,w_1333.jpg 1333w,
                     media/viro_zh9kd4_c_scale,w_1387.jpg 1387w,
                     media/viro_zh9kd4_c_scale,w_1443.jpg 1443w,
-                    media/viro_zh9kd4_c_scale,w_1580.jpg 1580w" src="media/viro_zh9kd4_c_scale,w_1580.jpg" alt="">
+                    media/viro_zh9kd4_c_scale,w_1580.jpg 1580w" data-src="media/viro_zh9kd4_c_scale,w_1580.jpg" alt="">
 
                 <div class="dataSheet">
                     <h3 class="dataSheet-title">Technical details</h3>
